# ocamlfdo

./: .gitignore  .ocamlformat  LICENSE  README.md  dune-project  ocamlfdo.install  ocamlfdo.opam
docs/: design.md
examples/: ocamlfdo.sh
examples/simple/: runme.sh
examples/simple_with_dune/: dune-project  dune-workspace
examples/simple_with_dune/src/: dune  test2.ml
resources/: dune  linker-script
src/: .#perf_profile.ml  addr.ml  aggregated_decoded_profile.ml  aggregated_decoded_profile.mli  aggregated_perf_profile.ml  aggregated_perf_profile.mli  block_info.ml  block_info.mli  bolt_profile.ml  bolt_profile.mli  cfg.ml  cfg.mli  cfg_builder.ml  cfg_builder.mli  cfg_info.ml  cfg_info.mli  cfg_label.ml  check_invariants.ml  check_invariants.mli  cli.ml  clusters.ml  clusters.mli  compute_execounts.ml  config_reorder.ml  config_reorder.mli  crcs.ml  crcs.mli  dbg.ml  decoded_bolt_profile.ml  decoded_bolt_profile.mli  dune  elf_addr.ml  elf_addr.mli  elf_locations.ml  elf_locations.mli  execount.ml  execount.mli  extra_debug.ml  filenames.ml  filenames.mli  (+61 more)
test/: README.md  dune  test2.exe.fdo-profile.expected  test2.exe.linker-script-hot.expected  test2.exe.linker-script.expected
