(executable
 (name ocamlfdo)
 (public_name ocamlfdo)
 (package ocamlfdo)
 (libraries
        owee
        core
        csvfields
        ocaml-compiler-libs.common
        ocaml-compiler-libs.optcomp
        parsexp_io
        shexp.process
        ocamlcfg)
 (preprocess (pps ppx_jane ppx_csv_conv ppx_variants_conv)))

(alias (name DEFAULT) (deps ocamlfdo.ml.pp))
