(executable
 (name ocamlfdo)
 (public_name ocamlfdo)
 (package ocamlfdo)
 (ocamlopt_flags (:standard "-g"))
 (libraries
        owee
        core
        compiler-libs.optcomp
        parsexp_io
        shexp.process
        ocamlcfg
        re2
        dune-build-info
        bin_prot
        )
 (preprocess (pps ppx_jane)))

(alias (name DEFAULT) (deps ocamlfdo.ml.pp))
